--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title> Homework01</title>
  </head>
 <body>
+	< a href="https://github.com/ayah89/CIS-1300/blob/master/index_hw2.html"> HW2</a>
 	
 	<p>Homework 01</p>
 <p> Hey Jude, don’t make it bad,Take a sad song and make it better, Remember to let her into your heart. 
