--- a/index.html
+++ b/index.html
@@ -2,27 +2,37 @@
 <html>
  <head>
   <title> Homework01</title>
- </head>
-<body>
+
 	<a href="https://github.com/ayah89/CIS-1300/blob/master/index_hw2.html">Click here for HW2</a>
-	
-	<p>Homework 01</p>
-<p> Hey Jude, don’t make it bad,Take a sad song and make it better, Remember to let her into your heart. 
-	Then you can start to make it better Hey Jude, don’t be afraid. You were made to go out and get her.
-	The minute you let her under your skin.Then you begin to make it better
-	</p>
- <p>
- 	 Shall I compare thee to a summer’s day?
-Thou art more lovely and more temperate:
-Rough winds do shake the darling buds of May,
-And summer’s lease hath all too short a date: Sometime too hot the eye of heaven shines,
-And often is his gold complexion dimm’d;
-And every fair from fair sometime declines,
-By chance, or nature’s changing course, untrimm’d; But thy eternal summer shall not fade
-Nor lose possession of that fair thou ow’st;
-Nor shall Death brag thou wander’st in his shade,
-When in eternal lines to time thou grow’st; So long as men can breathe or eyes can see,
-So long lives this, and this gives life to thee.
-</p>
-</body>
+
+	<style>
+    h1 {
+      background-color:#9BC1C2;
+      text-align:center;
+    }
+
+    nav {
+      font-weight: bold;
+      text-align: center;
+    }
+
+    nav a {
+      text-decoration: none;
+    }
+
+  </style>
+<title>Web Design Course</title>
+<meta charset="UTF-8" />
+</head>
+<body>
+  <header>
+    <h1>Web Design Course</h1>
+  </header>
+
+  <nav>
+      <a href="home.html">Home</a> &#xA0;
+        <a href="assignment.html">Assignments</a> &#xA0;
+                <a href="contact.html">Contact Ayah</a> &#xA0;
+  </nav>
+  </body>
   </html>
