--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title> Homework01</title>
 
 	<a href="https://github.com/ayah89/CIS-1300/blob/master/index_hw2.html">Click here for HW2</a>
+	 
 
 	<style>
     h1 {
@@ -30,7 +31,7 @@
   </header>
 
   <nav>
-      <a href="home.html">Home</a> &#xA0;
+      <a href="file:///Users/ayaalqashteeni/Desktop/CIS1300/HW02/index_hw2.html">Home</a> &#xA0;
         <a href="assignment.html">Assignments</a> &#xA0;
                 <a href="contact.html">Contact Ayah</a> &#xA0;
   </nav>
