--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
  <head>
-  <title> Homework01</title>
+  <title> Ayah's main page</title>
 
 	<a href="https://github.com/ayah89/CIS-1300/blob/master/index_hw2.html">Click here for HW2</a>
 	 
