--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title> Ayah's main page</title>
 
 	<a href="https://github.com/ayah89/CIS-1300/blob/master/index_hw2.html">Click here for HW2</a>
+	 <a herf="[GitHub Pages](https://pages.github.com/)">click</a>
 	 
 
 	<style>
