--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
  <head>
   <title> Ayah's main page</title>
 
-	<a href="https://github.com/ayah89/CIS-1300/blob/master/index_hw2.html">Click here for HW2</a>
-	 <a herf="[GitHub Pages](https://pages.github.com/)">click</a>
+	<a href="https://ayah89.github.io/CIS-1300/index_hw2.html">Click here for HW2</a>
 	 
 
 	<style>
