--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title> Ayah's main page</title>
 
 	<a href="https://ayah89.github.io/CIS-1300/index_hw2.html">Click here for HW2</a>
+	 <a href="https://ayah89.github.io/CIS-1300/WebDesign1300/HW01/HW02/HW03/HW04/index.html">Click here for RAINBOW HW</a>
 	 
 
 	<style>
