--- a/index.html
+++ b/index.html
@@ -3,10 +3,6 @@
  <head>
   <title> Ayah's main page</title>
 
-	<a href="https://ayah89.github.io/CIS-1300/index_hw2.html">Click here for HW2</a>
-	 <a href="https://ayah89.github.io/CIS-1300/WebDesign1300/HW01/HW02/HW03/HW04/index.html">Click here for RAINBOW HW</a>
-	 
-
 	<style>
     h1 {
       background-color:#9BC1C2;
@@ -30,7 +26,8 @@
   <header>
     <h1>Web Design Course</h1>
   </header>
-
+<a href="https://ayah89.github.io/CIS-1300/index_hw2.html">Click here for HW2</a><br>
+<a href="https://ayah89.github.io/CIS-1300/WebDesign1300/HW01/HW02/HW03/HW04/index.html">Click here for RAINBOW HW</a>
   <nav>
       <a href="file:///Users/ayaalqashteeni/Desktop/CIS1300/HW02/index_hw2.html">Home</a> &#xA0;
         <a href="assignment.html">Assignments</a> &#xA0;
