--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
   <header>
     <h1>Web Design Course</h1>
   </header>
-<a href="https://ayah89.github.io/CIS-1300/index_hw2.html">Click here for HW2</a><br>
-<a href="https://ayah89.github.io/CIS-1300/WebDesign1300/HW01/HW02/HW03/HW04/index.html">Click here for RAINBOW HW</a>
+<a href="https://ayah89.github.io/CIS-1300/index_hw2.html">Click here for HW2</a><br><br>
+<a href="https://ayah89.github.io/CIS-1300/WebDesign1300/HW01/HW02/HW03/HW04/index.html">Click here for RAINBOW HW</a><br><br>
 <a href="https://ayah89.github.io/CIS-1300/WebDesign1300/HW01/HW02/HW03/index.html">Click here for HW3</a>	
   <nav>
       <a href="file:///Users/ayaalqashteeni/Desktop/CIS1300/HW02/index_hw2.html">Home</a> &#xA0;
