--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 <a href="https://ayah89.github.io/CIS-1300/WebDesign1300/HW01/HW02/HW03/HW04/index.html">Click here for RAINBOW HW</a><br>
 <a href="https://ayah89.github.io/CIS-1300/WebDesign1300/HW01/HW02/HW03/index.html">Click here for HW3</a><br>
 <a href="https://ayah89.github.io/CIS-1300/WebDesign1300/HW01/HW02/HW03/HW04/HW5/index.html">Click here for HW5</a><br>
+<a href="https://ayah89.github.io/CIS-1300/WebDesign1300/HW01/HW02/HW03/HW04/HW5/index.html">Click here for Resume</a><br>
   <nav>
       <a href="file:///Users/ayaalqashteeni/Desktop/CIS1300/HW02/index_hw2.html">Home</a> &#xA0;
         <a href="assignment.html">Assignments</a> &#xA0;
