--- a/WebDesign1300/HW01/HW02/HW03/HW04/HW5/index.html
+++ b/WebDesign1300/HW01/HW02/HW03/HW04/HW5/index.html
@@ -1,42 +1,95 @@
-<<!DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Traditional layout</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Resume</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-  <div id="page">
-  <div class="header">
-        <h1>Homework 05 “Traditional layout”</h1>
-      </div>
- <div id="content">
-   <div class="main">
-     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Praesent tristique magna sit amet purus gravida quis. In fermentum et sollicitudin ac orci phasellus egestas tellus. Tortor dignissim convallis aenean et tortor at risus. Scelerisque purus semper eget duis at. Sed risus ultricies tristique nulla aliquet enim tortor. Lobortis mattis aliquam faucibus purus in massa tempor nec. Gravida neque convallis a cras semper. Convallis tellus id interdum velit laoreet id. Posuere ac ut consequat semper viverra nam libero. Semper viverra nam libero justo. Elementum facilisis leo vel fringilla est ullamcorper eget nulla. Iaculis nunc sed augue lacus viverra. Ut tortor pretium viverra suspendisse potenti nullam. Interdum consectetur libero id faucibus nisl tincidunt eget. Tristique et egestas quis ipsum suspendisse ultrices gravida dictum fusce. Augue mauris augue neque gravida in. Ante metus dictum at tempor. Libero volutpat sed cras ornare. Tempor nec feugiat nisl pretium fusce id. Gravida in fermentum et sollicitudin. Venenatis urna cursus eget nunc scelerisque viverra mauris in aliquam. In est ante in nibh mauris cursus mattis molestie. Posuere ac ut consequat semper. Et sollicitudin ac orci phasellus. Ultricies lacus sed turpis tincidunt id aliquet risus feugiat in. Eu scelerisque felis imperdiet proin fermentum leo vel. Risus sed vulputate odio ut enim blandit volutpat maecenas. Nisi porta lorem mollis aliquam ut porttitor. Tristique nulla aliquet enim tortor. Facilisis gravida neque convallis a cras semper</p>
-   <br>
-   <p>Urna neque viverra justo nec ultrices dui. Ultrices mi tempus imperdiet nulla malesuada pellentesque elit eget gravida. Arcu dui vivamus arcu felis bibendum ut tristique. Diam sit amet nisl suscipit adipiscing bibendum. Cras adipiscing enim eu turpis. Amet est placerat in egestas erat imperdiet. Enim eu turpis egestas pretium aenean pharetra. Tristique senectus et netus et malesuada fames ac turpis. Nunc scelerisque viverra mauris in aliquam sem fringilla ut morbi. Risus sed vulputate odio ut enim blandit volutpat maecenas volutpat.</p>
-   <br>
+    <div id="wrapper">
+      <div class="header">
+        <img src="logo.png" alt="logo" width="100" height="140">
+        <div class="contact">
+          <h1>Ayah Alqashteeni</h1>
+          <p>777-333-8910<br> 245 North Ave chicago IL, 60201</P>
+          </div>
 
-     </div>
-   <div class="row">
-   <div class="sidebar">
-   <p>Cursus in hac habitasse platea dictumst quisque sagittis purus sit. Sed libero enim sed faucibus turpis in eu. Accumsan in nisl nisi scelerisque eu ultrices vitae. Elit ut aliquam purus sit amet luctus venenatis lectus magna. Augue lacus viverra vitae congue eu. Arcu vitae elementum curabitur vitae nunc. Nam at lectus urna duis convallis convallis. Neque ornare aenean euismod elementum nisi quis. Vulputate odio ut enim blandit volutpat maecenas volutpat blandit aliquam. Sem et tortor consequat id porta nibh venenatis cras sed. Pellentesque habitant morbi tristique senectus.</p>
-   <br>
-   <p>Cursus in hac habitasse platea dictumst quisque sagittis purus sit. Sed libero enim sed faucibus turpis in eu. Accumsan in nisl nisi scelerisque eu ultrices vitae. Elit ut aliquam purus sit amet luctus venenatis lectus magna. Augue lacus viverra vitae congue eu. Arcu vitae elementum curabitur vitae nunc. Nam at lectus urna duis convallis convallis. Neque ornare aenean euismod elementum nisi quis. Vulputate odio ut enim blandit volutpat maecenas volutpat blandit aliquam. Sem et tortor consequat id porta nibh venenatis cras sed. Pellentesque habitant morbi tristique senectus.</p>
+          </div>
+          <div class="sidebar">
+            <div class="skills">
+            <h3 class="textcolor">skills</h3>
+            <ul>
+              <li>Web Development</li>
+              <li>Workflow optimization</li>
+              <li>Project Management</li>
+              <li>Microsoft office, excel proficiency</li>
+              <li>Adobe photoshop and illustrator</li>
+              <li>SQL database</li>
+              <li>knowledge in 3D design using 3D Max</li>
+              <li>Web Development</li>
+              <li>Workflow optimization</li>
+              <li>Project Management</li>
+              <li>Microsoft office, excel proficiency</li>
+              <li>Adobe photoshop and illustrator</li>
+              <li>SQL database</li>
+              <li>knowledge in 3D design using 3D Max</li>
+              </ul>
+              </div>
+            </div>
 
-   <p>Cursus in hac habitasse platea dictumst quisque sagittis purus sit. Sed libero enim sed faucibus turpis in eu. Accumsan in nisl nisi scelerisque eu ultrices vitae. Elit ut aliquam purus sit amet luctus venenatis lectus magna. Augue lacus viverra vitae congue eu. Arcu vitae elementum curabitur vitae nunc. Nam at lectus urna duis convallis convallis. Neque ornare aenean euismod elementum nisi quis. Vulputate odio ut enim blandit volutpat maecenas volutpat blandit aliquam. Sem et tortor consequat id porta nibh venenatis cras sed. Pellentesque habitant morbi tristique senectus.</p>
-   <br>
-   <p>Cursus in hac habitasse platea dictumst quisque sagittis purus sit. Sed libero enim sed faucibus turpis in eu. Accumsan in nisl nisi scelerisque eu ultrices vitae. Elit ut aliquam purus sit amet luctus venenatis lectus magna. Augue lacus viverra vitae congue eu. Arcu vitae elementum curabitur vitae nunc. Nam at lectus urna duis convallis convallis. Neque ornare aenean euismod elementum nisi quis. Vulputate odio ut enim blandit volutpat maecenas volutpat blandit aliquam. Sem et tortor consequat id porta nibh venenatis cras sed.
-     <p>Cursus in hac habitasse platea dictumst quisque sagittis purus sit. Sed libero enim sed faucibus turpis in eu. Accumsan in nisl nisi scelerisque eu ultrices vitae. Elit ut aliquam purus sit amet luctus venenatis lectus magna. Augue lacus viverra vitae congue eu. Arcu vitae elementum curabitur vitae nunc. Nam at lectus urna duis convallis convallis. Neque ornare aenean euismod elementum nisi quis. Vulputate odio ut enim blandit volutpat maecenas volutpat blandit aliquam. Sem et tortor consequat id porta nibh venenatis cras sed. Pellentesque habitant morbi tristique senectus.</p>
-     <br>
-     <p>Cursus in hac habitasse platea dictumst quisque sagittis purus sit. Sed libero enim sed faucibus turpis in eu. Accumsan in nisl nisi scelerisque eu ultrices vitae. Elit ut aliquam purus sit amet luctus venenatis lectus magna. Augue lacus viverra vitae congue eu. Arcu vitae elementum curabitur vitae nunc. Nam at lectus urna duis convallis convallis. Neque ornare aenean euismod elementum nisi quis. Vulputate odio ut enim blandit volutpat maecenas volutpat blandit aliquam. Sem et tortor consequat id porta nibh venenatis cras sed.
-</div>
-</div>
 
-  </div>
-  </div>
-  <div id="footer">
-    <p>Copyright © 2020 All rights reserved.</p>
-    </div>
-    </body>
+
+      <div class="content">
+        <div class="main">
+          <h2 class="textcolor">Professional Experience</h2>
+          <h6>7/1/2020 - Current</h6>
+          <h4>Web Developer</h4>
+          <p>I'm responsible for the coding, design and layout of a website
+            according to a company's specifications.
+             As the role takes into consideration user experience and function,
+             a certain level of both graphic design and computer programming is
+              necessary.</p>
+             <br>
+              <h6>8/2/2014 - 9/7/2015</h6>
+              <h4>Software Design</h4>
+              <p>Software engineers design, develop, and test software
+                and applications for computers.
+                The main duties and responsibilities of software engineers
+                include directing and participating
+                in programming activities,
+                monitoring, and evaluating
+                system performance, and designing and implementing new
+                programs and features.</p>
+                <br>
+
+                <h6>10/5/2016 - 9/7/2019</h6>
+                <h4>Data Entry Clerk</h4>
+                <p>Maintains database by entering new and updated customer
+                   and account information. Prepares source data for computer
+                   entry by compiling and sorting information.
+                   Establishes entry priorities. Processes customer and
+                   account source documents by reviewing data for deficiencies.</p>
+                   <br>
+                  <h2 class="textcolor">Education</h2>
+                  <h3>University of Hawaii, 2010–2014</h3>
+                  <p>Bachelor of IT in Computer Scince</p>
+                  <p>Business Essentials Certificate</p>
+                  <br>
+
+                  <h2 class="textcolor">Honors</h2>
+                  <p>Prominent Coursework: Intro to Risk Management, Actuary Sciences</p>
+                  <p>Honors: Member, Phi Mu Epsilon</p>
+                  <p>Johnson Academic Achievement Scholarship<p>
+
+
+
+          </div>
+        </div>
+
+        <div class="footer">
+          <p>Updated: January 2020</p>
+          </div>
+          </div>
+
+  </body>
 </html>
