--- a/github.html
+++ b/github.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>Main Github Page</title>
   </head>
+  <header>
+    <h1>Web Design Course</h1>
   <body>
     <a href="https://ayah89.github.io/CIS-1300/WebDesign1300/HW01/HW02/HW03/index.html">Click here for HW3</a><br>
     <a href="https://ayah89.github.io/CIS-1300/WebDesign1300/HW01/HW02/HW03/HW04/HW5/index.html">Click here for HW5</a><br>
